Examples in html

--- a/test.html
+++ b/test.html
@@ -15,5 +15,9 @@
     <a class="cyberpunk2077 purple">Link purple_</a>
     <button class="cyberpunk2077 blue">Button blue_</button>
     <hr/>
+    <h1 class="cyberpunk">H1 title</h1> 
+    <h2 class="cyberpunk">H2 title</h2> 
+    <h3 class="cyberpunk">H3 title</h3> 
+    <h4 class="cyberpunk">H4 title</h4>   
   </body>
 </html>
