frames for images and section

--- a/test.html
+++ b/test.html
@@ -9,15 +9,37 @@
     <style>
     </style>
   </head>
-  <body style="min-height: 200vh;">
-    <a class="cyberpunk2077">Link red_</a>
-    <button class="cyberpunk2077 green">Button green_</button>
-    <a class="cyberpunk2077 purple">Link purple_</a>
-    <button class="cyberpunk2077 blue">Button blue_</button>
-    <hr/>
-    <h1 class="cyberpunk">H1 title</h1> 
-    <h2 class="cyberpunk">H2 title</h2> 
-    <h3 class="cyberpunk">H3 title</h3> 
-    <h4 class="cyberpunk">H4 title</h4>   
+  <body>
+    <section class="cyberpunk"> 
+      <a class="cyberpunk2077">Link red_</a>
+      <button class="cyberpunk2077 green">Button green_</button>
+      <a class="cyberpunk2077 purple">Link purple_</a>
+      <button class="cyberpunk2077 blue">Button blue_</button>
+      <hr/>
+      <h1 class="cyberpunk">H1 title</h1> 
+      <h2 class="cyberpunk">H2 title</h2> 
+      <h3 class="cyberpunk">H3 title</h3> 
+      <h4 class="cyberpunk">H4 title</h4> 
+      <hr/>
+      <input class="cyberpunk" type="text" />
+      <textarea class="cyberpunk"></textarea>
+      <input class="cyberpunk" type="radio" />
+      <input class="cyberpunk" type="checkbox" />
+      <hr/>
+      <img class="cyberpunk" src="http://dummy-images.com/buildings/dummy-480x270-Namur.jpg" alt="" />
+    </section>
+    <section class="cyberpunk black">
+      <h1 class="cyberpunk">H1 title</h1> 
+      <h2 class="cyberpunk">H2 title</h2> 
+      <h3 class="cyberpunk">H3 title</h3> 
+      <h4 class="cyberpunk">H4 title</h4> 
+      <hr/>
+      <input class="cyberpunk" type="text" />
+      <textarea class="cyberpunk"></textarea>
+      <input class="cyberpunk" type="radio" />
+      <input class="cyberpunk" type="checkbox" />
+      <hr/>
+      <img class="cyberpunk" src="http://dummy-images.com/abstract/dummy-480x270-Menu.jpg" alt="" />
+    </section>
   </body>
 </html>
