--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
     </style>
   </head>
   <body>
+    <header style="background-color: #000; height: 50px;"></header>
     <section class="cyberpunk"> 
       <a class="cyberpunk2077">Link red_</a>
       <button class="cyberpunk2077 green">Button green_</button>
@@ -23,8 +24,9 @@
       <hr/>
       <input class="cyberpunk" type="text" />
       <textarea class="cyberpunk"></textarea>
-      <input class="cyberpunk" type="radio" />
-      <input class="cyberpunk" type="checkbox" />
+      <label class="cyberpunk"><input class="cyberpunk" type="radio" /> Lorem ipsum sid amet.</label><br/>
+      <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> Lorem ipsum sid amet.</label><br/>
+      <button type="submit" class="cyberpunk2077 red">Submit_</button>
       <hr/>
       <img class="cyberpunk" src="http://dummy-images.com/buildings/dummy-480x270-Namur.jpg" alt="" />
     </section>
@@ -36,10 +38,12 @@
       <hr/>
       <input class="cyberpunk" type="text" />
       <textarea class="cyberpunk"></textarea>
-      <input class="cyberpunk" type="radio" />
-      <input class="cyberpunk" type="checkbox" />
+      <label class="cyberpunk"><input class="cyberpunk" type="radio" /> Lorem ipsum sid amet.</label><br/>
+      <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> Lorem ipsum sid amet.</label><br/>
+      <button type="submit" class="cyberpunk2077 red">Submit_</button>
       <hr/>
       <img class="cyberpunk" src="http://dummy-images.com/abstract/dummy-480x270-Menu.jpg" alt="" />
     </section>
+    <header style="background-color: var(--color-yellow); height: 50px;"></header>
   </body>
 </html>
