--- a/test.html
+++ b/test.html
@@ -16,19 +16,6 @@
       <button class="cyberpunk2077 green">Button green_</button>
       <a class="cyberpunk2077 purple">Link purple_</a>
       <button class="cyberpunk2077 blue">Button blue_</button>
-      <hr/>
-      <h1 class="cyberpunk">H1 title</h1> 
-      <h2 class="cyberpunk">H2 title</h2> 
-      <h3 class="cyberpunk">H3 title</h3> 
-      <h4 class="cyberpunk">H4 title</h4> 
-      <hr/>
-      <input class="cyberpunk" type="text" />
-      <textarea class="cyberpunk"></textarea>
-      <label class="cyberpunk"><input class="cyberpunk" type="radio" /> Lorem ipsum sid amet.</label><br/>
-      <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> Lorem ipsum sid amet.</label><br/>
-      <button type="submit" class="cyberpunk2077 red">Submit_</button>
-      <hr/>
-      <img class="cyberpunk" src="http://dummy-images.com/buildings/dummy-480x270-Namur.jpg" alt="" />
     </section>
     <section class="cyberpunk black">
       <h1 class="cyberpunk">H1 title</h1> 
@@ -36,14 +23,37 @@
       <h3 class="cyberpunk">H3 title</h3> 
       <h4 class="cyberpunk">H4 title</h4> 
       <hr/>
+    </section>
+    <section class="cyberpunk">
       <input class="cyberpunk" type="text" />
       <textarea class="cyberpunk"></textarea>
-      <label class="cyberpunk"><input class="cyberpunk" type="radio" /> Lorem ipsum sid amet.</label><br/>
-      <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> Lorem ipsum sid amet.</label><br/>
+      <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
+      <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
+      <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
       <button type="submit" class="cyberpunk2077 red">Submit_</button>
-      <hr/>
+    </section>
+    <section class="cyberpunk black">
+      <img class="cyberpunk" src="http://dummy-images.com/buildings/dummy-480x270-Namur.jpg" alt="" />
       <img class="cyberpunk" src="http://dummy-images.com/abstract/dummy-480x270-Menu.jpg" alt="" />
     </section>
-    <header style="background-color: var(--color-yellow); height: 50px;"></header>
+    <section class="cyberpunk">
+      <h1 class="cyberpunk">H1 title</h1> 
+      <h2 class="cyberpunk">H2 title</h2> 
+      <h3 class="cyberpunk">H3 title</h3> 
+      <h4 class="cyberpunk">H4 title</h4> 
+    </section>
+    <section class="cyberpunk black">
+      <input class="cyberpunk" type="text" />
+      <textarea class="cyberpunk"></textarea>
+      <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
+      <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
+      <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
+      <button type="submit" class="cyberpunk2077 red">Submit_</button>
+    </section>
+    <section class="cyberpunk">
+      <img class="cyberpunk" src="http://dummy-images.com/buildings/dummy-480x270-Namur.jpg" alt="" />
+      <img class="cyberpunk" src="http://dummy-images.com/abstract/dummy-480x270-Menu.jpg" alt="" />
+    </section>
+    <footer style="background-color: #000; height: 50px;"></footer>
   </body>
 </html>
