Paragraphs and lists

--- a/test.html
+++ b/test.html
@@ -34,7 +34,7 @@
     </section>
     <section class="cyberpunk black">
       <img class="cyberpunk" src="http://dummy-images.com/buildings/dummy-480x270-Namur.jpg" alt="" />
-      <img class="cyberpunk" src="http://dummy-images.com/abstract/dummy-480x270-Menu.jpg" alt="" />
+      <img class="cyberpunk dotted" src="http://dummy-images.com/abstract/dummy-480x270-Menu.jpg" alt="" />
     </section>
     <section class="cyberpunk">
       <h1 class="cyberpunk">H1 title</h1> 
@@ -43,16 +43,50 @@
       <h4 class="cyberpunk">H4 title</h4> 
     </section>
     <section class="cyberpunk black">
+      <p class="cyberpunk">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
+      <ul>
+        <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
+        <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
+        <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
+        <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+      </ul>
+      <p class="cyberpunk inverse">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
+      <p class="cyberpunk inverse dotted">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
+      <ol>
+        <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
+        <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
+        <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
+        <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+      </ol>
+    </section>
+    <section class="cyberpunk">
+      <p class="cyberpunk">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
+      <ul>
+        <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
+        <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
+        <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
+        <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+      </ul>
+      <p class="cyberpunk inverse">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
+      <p class="cyberpunk inverse dotted">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
+      <ol>
+        <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
+        <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
+        <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
+        <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+      </ol>
+    </section>
+    <section class="cyberpunk black">
       <input class="cyberpunk" type="text" />
       <textarea class="cyberpunk"></textarea>
       <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
       <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
       <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
-      <button type="submit" class="cyberpunk2077 red">Submit_</button>
+      <button type="submit" class="cyberpunk2077 blue">Submit_</button>
     </section>
     <section class="cyberpunk">
       <img class="cyberpunk" src="http://dummy-images.com/buildings/dummy-480x270-Namur.jpg" alt="" />
-      <img class="cyberpunk" src="http://dummy-images.com/abstract/dummy-480x270-Menu.jpg" alt="" />
+      <img class="cyberpunk dotted" src="http://dummy-images.com/abstract/dummy-480x270-Menu.jpg" alt="" />
     </section>
     <footer style="background-color: #000; height: 50px;"></footer>
   </body>
