Glitched for titles

--- a/test.html
+++ b/test.html
@@ -18,10 +18,14 @@
       <button class="cyberpunk2077 blue">Button blue_</button>
     </section>
     <section class="cyberpunk black">
-      <h1 class="cyberpunk">H1 title</h1> 
+      <h1 class="cyberpunk">H1 title</h1>
+      <h1 class="cyberpunk glitched">H1 title glitched</h1> 
       <h2 class="cyberpunk">H2 title</h2> 
+      <h2 class="cyberpunk glitched">H2 title glitched</h2> 
       <h3 class="cyberpunk">H3 title</h3> 
+      <h3 class="cyberpunk glitched">H3 title glitched</h3> 
       <h4 class="cyberpunk">H4 title</h4> 
+      <h4 class="cyberpunk glitched">H4 title glitched</h4> 
       <hr/>
     </section>
     <section class="cyberpunk">
@@ -37,10 +41,14 @@
       <img class="cyberpunk dotted" src="http://dummy-images.com/abstract/dummy-480x270-Menu.jpg" alt="" />
     </section>
     <section class="cyberpunk">
-      <h1 class="cyberpunk">H1 title</h1> 
+      <h1 class="cyberpunk">H1 title</h1>
+      <h1 class="cyberpunk glitched">H1 title glitched</h1> 
       <h2 class="cyberpunk">H2 title</h2> 
+      <h2 class="cyberpunk glitched">H2 title glitched</h2> 
       <h3 class="cyberpunk">H3 title</h3> 
+      <h3 class="cyberpunk glitched">H3 title glitched</h3> 
       <h4 class="cyberpunk">H4 title</h4> 
+      <h4 class="cyberpunk glitched">H4 title glitched</h4> 
     </section>
     <section class="cyberpunk black">
       <p class="cyberpunk">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
