--- a/test.html
+++ b/test.html
@@ -31,9 +31,15 @@
     <section class="cyberpunk">
       <input class="cyberpunk" type="text" />
       <textarea class="cyberpunk"></textarea>
+      <select class="cyberpunk">
+        <option>Item 1</option>
+        <option>Item 2</option>
+        <option>Item 3</option>
+      </select><br/>
       <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
-      <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
+      <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" checked="checked" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
       <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
+      <label class="cyberpunk"><input class="cyberpunk" type="checkbox" checked="checked" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
       <button type="submit" class="cyberpunk2077 red">Submit_</button>
     </section>
     <section class="cyberpunk black">
@@ -87,9 +93,15 @@
     <section class="cyberpunk black">
       <input class="cyberpunk" type="text" />
       <textarea class="cyberpunk"></textarea>
-      <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
-      <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
+      <select class="cyberpunk">
+        <option>Item 1</option>
+        <option>Item 2</option>
+        <option>Item 3</option>
+      </select><br/>
+      <label class="cyberpunk"><input class="cyberpunk" name="test2" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
+      <label class="cyberpunk"><input class="cyberpunk" name="test2" type="radio" checked="checked" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
       <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
+      <label class="cyberpunk"><input class="cyberpunk" type="checkbox" checked="checked" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
       <button type="submit" class="cyberpunk2077 blue">Submit_</button>
     </section>
     <section class="cyberpunk">
