Select design and hr glitched

--- a/test.html
+++ b/test.html
@@ -26,21 +26,24 @@
       <h3 class="cyberpunk glitched">H3 title glitched</h3> 
       <h4 class="cyberpunk">H4 title</h4> 
       <h4 class="cyberpunk glitched">H4 title glitched</h4> 
-      <hr/>
+      <hr class="cyberpunk" />
+      <hr class="cyberpunk glitched" />
     </section>
     <section class="cyberpunk">
-      <input class="cyberpunk" type="text" />
-      <textarea class="cyberpunk"></textarea>
-      <select class="cyberpunk">
-        <option>Item 1</option>
-        <option>Item 2</option>
-        <option>Item 3</option>
-      </select><br/>
-      <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
-      <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" checked="checked" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
-      <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
-      <label class="cyberpunk"><input class="cyberpunk" type="checkbox" checked="checked" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
-      <button type="submit" class="cyberpunk2077 red">Submit_</button>
+      <form style="max-width: 500px">
+        <input class="cyberpunk" type="text" />
+        <textarea class="cyberpunk"></textarea>
+        <select class="cyberpunk">
+          <option>Item 1</option>
+          <option>Item 2</option>
+          <option>Item 3</option>
+        </select><br/>
+        <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
+        <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" checked="checked" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
+        <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
+        <label class="cyberpunk"><input class="cyberpunk" type="checkbox" checked="checked" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
+        <button type="submit" class="cyberpunk2077 red">Submit_</button>
+      </form>
     </section>
     <section class="cyberpunk black">
       <img class="cyberpunk" src="http://dummy-images.com/buildings/dummy-480x270-Namur.jpg" alt="" />
@@ -54,7 +57,9 @@
       <h3 class="cyberpunk">H3 title</h3> 
       <h3 class="cyberpunk glitched">H3 title glitched</h3> 
       <h4 class="cyberpunk">H4 title</h4> 
-      <h4 class="cyberpunk glitched">H4 title glitched</h4> 
+      <h4 class="cyberpunk glitched">H4 title glitched</h4>
+      <hr class="cyberpunk" />
+      <hr class="cyberpunk glitched" />
     </section>
     <section class="cyberpunk black">
       <p class="cyberpunk">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
@@ -91,18 +96,20 @@
       </ol>
     </section>
     <section class="cyberpunk black">
-      <input class="cyberpunk" type="text" />
-      <textarea class="cyberpunk"></textarea>
-      <select class="cyberpunk">
-        <option>Item 1</option>
-        <option>Item 2</option>
-        <option>Item 3</option>
-      </select><br/>
-      <label class="cyberpunk"><input class="cyberpunk" name="test2" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
-      <label class="cyberpunk"><input class="cyberpunk" name="test2" type="radio" checked="checked" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
-      <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
-      <label class="cyberpunk"><input class="cyberpunk" type="checkbox" checked="checked" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
-      <button type="submit" class="cyberpunk2077 blue">Submit_</button>
+      <form style="max-width: 500px">
+        <input class="cyberpunk" type="text" />
+        <textarea class="cyberpunk"></textarea>
+        <select class="cyberpunk">
+          <option>Item 1</option>
+          <option>Item 2</option>
+          <option>Item 3</option>
+        </select><br/>
+        <label class="cyberpunk"><input class="cyberpunk" name="test2" type="radio" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
+        <label class="cyberpunk"><input class="cyberpunk" name="test2" type="radio" checked="checked" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
+        <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
+        <label class="cyberpunk"><input class="cyberpunk" type="checkbox" checked="checked" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
+        <button type="submit" class="cyberpunk2077 blue">Submit_</button>
+      </form>
     </section>
     <section class="cyberpunk">
       <img class="cyberpunk" src="http://dummy-images.com/buildings/dummy-480x270-Namur.jpg" alt="" />
