--- a/test.html
+++ b/test.html
@@ -4,13 +4,13 @@
     <title>Cyberpunk-2077-theme-css</title>
     <meta name="description" content="This is a theme in CSS3 to simulate the interfaxes of the game CyberPunk 2077.">
     <meta name="viewport" content="width=device-width,minimum-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@200;300;500;600;700&display=swap" rel="stylesheet">
     <link href="./cyberpunk-2077.css" rel="stylesheet">
     <style>
     </style>
   </head>
   <body>
-    <header style="background-color: #000; height: 50px;"></header>
+    <header style="background-color: #000; height: 50px;"><a href="https://github.com/gwannon/Cyberpunk-2077-theme-css" style="color: #f9f002; font-size: 2rem;">Github</a></header>
     <section class="cyberpunk"> 
       <a class="cyberpunk2077">Link red_</a>
       <button class="cyberpunk2077 green">Button green_</button>
@@ -46,8 +46,8 @@
       </form>
     </section>
     <section class="cyberpunk black">
-      <img class="cyberpunk" src="http://dummy-images.com/buildings/dummy-480x270-Namur.jpg" alt="" />
-      <img class="cyberpunk dotted" src="http://dummy-images.com/abstract/dummy-480x270-Menu.jpg" alt="" />
+      <img class="cyberpunk" src="https://dummyimage.com/600x400/ff00ff/fff" alt="" />
+      <img class="cyberpunk dotted" src="https://dummyimage.com/600x400/ff00ff/fff" alt="" />
     </section>
     <section class="cyberpunk">
       <h1 class="cyberpunk">H1 title</h1>
@@ -63,36 +63,52 @@
     </section>
     <section class="cyberpunk black">
       <p class="cyberpunk">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
-      <ul>
+      <ul class="cyberpunk">
         <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
-        <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
+        <li class="glitched">featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
         <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
         <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+        <li class="glitched">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
+        <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
+        <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
+        <li class="glitched">and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
       </ul>
       <p class="cyberpunk inverse">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
       <p class="cyberpunk inverse dotted">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
-      <ol>
+      <ol class="cyberpunk">
         <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
         <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
+        <li class="glitched">Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
+        <li class="glitched">and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+        <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
+        <li class="glitched">featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
         <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
-        <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+        <li class="glitched">and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
       </ol>
     </section>
     <section class="cyberpunk">
       <p class="cyberpunk">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
-      <ul>
+      <ul class="cyberpunk">
         <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
-        <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
+        <li class="glitched">featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
         <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
         <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+        <li class="glitched">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
+        <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
+        <li class="glitched">Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
+        <li class="glitched">and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
       </ul>
       <p class="cyberpunk inverse">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
       <p class="cyberpunk inverse dotted">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
-      <ol>
+      <ol class="cyberpunk">
         <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
         <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
+        <li class="glitched">Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
+        <li class="glitched">and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+        <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
+        <li class="glitched">featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
         <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
-        <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+        <li class="glitched">and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
       </ol>
     </section>
     <section class="cyberpunk black">
@@ -112,8 +128,8 @@
       </form>
     </section>
     <section class="cyberpunk">
-      <img class="cyberpunk" src="http://dummy-images.com/buildings/dummy-480x270-Namur.jpg" alt="" />
-      <img class="cyberpunk dotted" src="http://dummy-images.com/abstract/dummy-480x270-Menu.jpg" alt="" />
+      <img class="cyberpunk" src="https://dummyimage.com/600x400/ff00ff/fff" alt="" />
+      <img class="cyberpunk dotted" src="https://dummyimage.com/600x400/ff00ff/fff" alt="" />
     </section>
     <footer style="background-color: #000; height: 50px;"></footer>
   </body>
