Aside menu support

--- a/test.html
+++ b/test.html
@@ -33,6 +33,9 @@
     <section class="cyberpunk">
       <form style="max-width: 500px">
         <input class="cyberpunk" type="text" />
+        <input class="cyberpunk" type="date" />
+        <input class="cyberpunk" type="phone" />
+        <input class="cyberpunk" type="number" />
         <textarea class="cyberpunk"></textarea>
         <select class="cyberpunk">
           <option>Item 1</option>
@@ -119,6 +122,9 @@
     <section class="cyberpunk black">
       <form style="max-width: 500px">
         <input class="cyberpunk" type="text" />
+        <input class="cyberpunk" type="date" />
+        <input class="cyberpunk" type="phone" />
+        <input class="cyberpunk" type="number" />
         <textarea class="cyberpunk"></textarea>
         <select class="cyberpunk">
           <option>Item 1</option>
@@ -136,6 +142,13 @@
       <img class="cyberpunk" src="https://dummyimage.com/600x400/ff00ff/fff" alt="" />
       <img class="cyberpunk dotted" src="https://dummyimage.com/600x400/ff00ff/fff" alt="" />
     </section>
+    <aside class="cyberpunk">
+      <ul>
+        <li><a href="#">&#9760; 555 555 555</a></li>
+        <li><a href="#">&#x2622; Contact us</a></li>
+        <li><a href="#">&#x267B; Location in the map</a></li>
+      </ul>
+    </aside>
     <footer style="background-color: #000; height: 50px;"></footer>
   </body>
 </html>
