Input password support

--- a/test.html
+++ b/test.html
@@ -36,6 +36,7 @@
         <input class="cyberpunk" type="date" />
         <input class="cyberpunk" type="phone" />
         <input class="cyberpunk" type="number" />
+        <input class="cyberpunk" type="password" />
         <textarea class="cyberpunk"></textarea>
         <select class="cyberpunk">
           <option>Item 1</option>
@@ -125,6 +126,7 @@
         <input class="cyberpunk" type="date" />
         <input class="cyberpunk" type="phone" />
         <input class="cyberpunk" type="number" />
+        <input class="cyberpunk" type="password" />
         <textarea class="cyberpunk"></textarea>
         <select class="cyberpunk">
           <option>Item 1</option>
